// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sale event search to-tenant 1`] = `
Object {
  "@context": "https://schema.org",
  "@type": "SaleEvent",
  "description": "Без залога и комиссии агенту",
  "endDate": "2022-02-01T21:00:00+03:00",
  "name": "🔔 Без комиссии",
  "startDate": "2021-12-01T21:00:00+03:00",
}
`;

exports[`sale event search to-tenant 2`] = `
Object {
  "@context": "https://schema.org",
  "@type": "SaleEvent",
  "description": "Общение с собственником через сервис",
  "endDate": "2022-02-01T21:00:00+03:00",
  "name": "🔔 Без депозита",
  "startDate": "2021-12-01T21:00:00+03:00",
}
`;

exports[`sale event search to-tenant 3`] = `
Object {
  "@context": "https://schema.org",
  "@type": "SaleEvent",
  "description": "Оплата картой и через личный кабинет, общение с собственником через сервис",
  "endDate": "2022-02-01T21:00:00+03:00",
  "name": "🔔 Все в личном кабинете",
  "startDate": "2021-12-01T21:00:00+03:00",
}
`;
